--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <section class="modal-parent">
                 <div class="modal">
                     <p class="modal-text">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero temporibus animi quis
+                        Lorem, Ipsum dolor sit amet Consectetur adipisicing elit. Libero temporibus animi quis
                         similique, sit amet, ipsum modi ex ea aspernatur ipsam. Rerum maiores ducimus alias, animi
                         itaque sunt molestias est, harum, dolorum voluptate eum beatae minima! Repellendus tempora atque
                         reiciendis sint voluptatibus blanditiis
                         ad vitae commodi, ipsum dolor sit amet consectetur adipisicing elit. vero nobis, neque debitis,
-                        et unde beatae animi accusantium expedita at temporibus ex amet. Modi, nemo ex cupiditate cumque
+                        et unde beatae animi Accusantium expedita at temporibus ex amet. Modi, nemo ex cupiditate cumque
                         possimus aperiam quibusdam quisquam amet voluptatum quia dolore harum alias corrupti nesciunt
                         consequuntur fugit rem, molestias aliquid minima suscipit atque ut laboriosam ullam
                         consequuntur id? Voluptates, exercitationem beatae minus illum sunt culpa laborum error!
