--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                         consequuntur fugit rem, molestias aliquid minima suscipit atque ut laboriosam ullam
                         consequuntur id? Voluptates, exercitationem beatae minus illum sunt culpa laborum error!
                     </p>
-                    <span class="multiplication">x</span>
+                    <span class="multiplication">X</span>
+
                 </div>
             </section>
         </div>
