add a javascript Code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         et unde beatae animi Accusantium expedita at temporibus ex amet. Modi, nemo ex cupiditate cumque
                         possimus aperiam quibusdam quisquam amet voluptatum quia dolore harum alias corrupti nesciunt
                         consequuntur fugit rem, molestias aliquid minima suscipit atque ut laboriosam ullam
-                        consequuntur id? Voluptates, exercitationem beatae minus illum sunt culpa laborum error!
+                        consequuntur id???? Voluptates, exercitationem beatae minus illum sunt culpa laborum error!
                     </p>
                     <span class="multiplication">X</span>
 
