create first element for nav menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         consequuntur id???? Voluptates, exercitationem beatae minus illum sunt culpa laborum error!
                     </p>
                     <span class="multiplication">X</span>
-
+                    <div>loremm</div>
                 </div>
             </section>
         </div>
