add a Text to project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         similique, sit amet, ipsum modi ex ea aspernatur ipsam. Rerum maiores ducimus alias, animi
                         itaque sunt molestias est, harum, dolorum voluptate eum beatae minima! Repellendus tempora atque
                         reiciendis sint voluptatibus blanditiis
-                        ad vitae Commodi, ipsum Dolor sit amet consectetur adipisicing elit. vero nobis, neque debitis,
+                        ad vitae Commodi, ipsum lorem Dolor sit amet consectetur adipisicing elit. vero nobis, neque debitis,
                         et unde beatae animi Accusantium expedita at temporibus ex amet. Modi, nemo ex cupiditate cumque
                         possimus aperiam quibusdam quisquam amet voluptatum quia dolore harum alias corrupti nesciunt
                         consequuntur fugit rem, molestias aliquid minima suscipit atque ut laboriosam ullam
